# BDA602_Group_Project

./: .env.example  .gitignore  CLAUDE.md  DEVELOPMENT_ROADMAP.md  README.md  SYSTEM_OVERVIEW.md  docker-compose.yml  pyproject.toml
app/: streamlit_app.py
docs/: SETUP_GUIDE.md
docs/stages/: STAGE_0_PROJECT_SCAFFOLDING.md  STAGE_1_DATA_MODELS_AND_DB.md  STAGE_2_DATA_ACQUISITION.md  STAGE_3_EMBEDDING_AND_INDEXING.md  STAGE_4_AGENTS_1_AND_2.md  STAGE_5_CITATION_EXPANSION.md  STAGE_6_RERANKING_AND_GROUNDING.md  STAGE_7_SYNTHESIS_AND_ORCHESTRATION.md  STAGE_8_EVALUATION.md  STAGE_9_STREAMLIT_UI.md
scripts/: build_corpus.py  build_eval_dataset.py  index_corpus.py  run_evaluation.py  test_agents_1_2_interactive.py  test_agents_interactive.py  test_search.py  validate_corpus.py
src/: __init__.py  config.py
src/agents/: __init__.py  expansion_agent.py  query_agent.py  reranking_agent.py  retrieval_agent.py  synthesis_agent.py
src/data/: __init__.py  corpus_builder.py  db.py  models.py  openalex_client.py
src/evaluation/: __init__.py  baselines.py  dataset.py  metrics.py  runner.py
src/indexing/: __init__.py  embedder.py  qdrant_store.py
src/orchestration/: __init__.py  graph.py  state.py
tests/: conftest.py  test_config.py  test_smoke.py
tests/test_agents/: test_expansion_agent.py  test_query_agent.py  test_reranking_agent.py  test_retrieval_agent.py  test_synthesis_agent.py
tests/test_app/: test_streamlit_smoke.py
tests/test_data/: test_db.py  test_models.py  test_openalex_client.py
tests/test_evaluation/: test_dataset.py  test_metrics.py
tests/test_indexing/: __init__.py  test_embedder.py  test_qdrant_store.py
tests/test_integration/: test_pipeline_e2e.py
tests/test_orchestration/: test_graph.py
